# recipeauth

./: README.md  db.sqlite3  pyproject.toml
recipebox/: settings.py  urls.py
recipes/: admin.py  forms.py  models.py  urls.py  views.py
recipes/migrations/: 0001_initial.py  0002_auto_20200911_2031.py
static/css/: main.css
templates/: authorDetail.html  author_form.html  generic_form.html  main.html  navbar.html  recipeDetail.html  recipe_form.html  signup_form.html
