[tool.poetry]
name = "recipeboxv1"
version = "0.1.0"
description = "assignment recipe box version 1"
authors = ["Amanda Yonce <amanda.stork@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
